--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "automatically find word placement from image of puzzle or manual input of letter placement",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
