--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "wordsearch"
   ],
   "author": "Martin Cameron",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
